web/app/themes/ppj/src/sass/components/text-block.sass
.text-block-container
  margin-left: auto
  margin-right: auto
  padding: $common-spacing 0
  width: 100%

  @include bp('portrait')
    padding: $common-spacing * 2 0
    width: calc(100% - 6.4rem)

  @include bp('large')
    width: 120rem

  .l-full &
    border-bottom: 1px solid $color-light

  .l-full &--highlighted, .l-full &--dark

    border-bottom: 0
    margin-left: 0
    margin-right: 0
    //padding-top: 0
    width: 100%

    @include bp('portrait')
      padding-top: $common-spacing * 2

  .l-full &--highlighted
    background-color: $color-section-highlighted

  .l-full &--dark
    background-color: $color-dark-section
    color: $color-white

  .l-full &--has-cta-link
    border-bottom: 0
    padding-bottom: 0

  .page-blocks .l-full:nth-last-child(2) &
    border-bottom: none

  .l-full &--multi
    //border-bottom: 0

    .text-block
      width: 100%

.text-block
  font-size: $font-size-small
  //margin: 0 $common-spacing 0
  margin: 0
  padding-left: $common-spacing
  padding-right: $common-spacing

  @include bp('portrait')
    font-size: $font-size-medium
    margin: auto
    width: 75%

  @include bp('landscape')
    font-size: $font-size-large-medium
    width: 91.5rem

  @include bp('large')
    width: 79.2rem

  &__title
    @extend .common-header
    font-size: 2.2rem
    line-height: 2.6rem
    margin-bottom: .3em
    margin-top: .3em

    @include bp('portrait')
      font-size: 3rem
      line-height: 3.6rem
      margin-left: auto
      margin-right: auto
      text-align: center

    @include bp('landscape')
      font-size: 3.8rem
      line-height: 4.6rem

    @include bp('large')
      font-size: 4.4rem
      line-height: 5rem

  &__subtitle
    font-weight: $font-weight-bold
    font-size: 1.8rem
    line-height: 2.4rem

    @include bp('portrait')
      font-size: 2rem
      line-height: 2.6rem

    @include bp('landscape')
      font-size: 2.6rem
      line-height: 3.4rem

    @include bp('large')
      font-size: 3rem
      line-height: 4rem

  &__content
    display: flex
    flex-direction: column
    font-size: 1.6rem
    line-height: 2.2rem

    @include bp('portrait')
      font-size: 1.8rem
      line-height: 2.4rem

    @include bp('landscape')
      font-size: 2.4rem
      line-height: 3.2rem

    @include bp('large')
      font-size: 2.8rem
      line-height: 3.8rem

    img
      width: 100%

    & > h4
      font-weight: $font-weight-bold
      font-size: 1.8rem
      line-height: 2.4rem
      margin: 1.8rem 0

      @include bp('portrait')
        font-size: 2rem
        line-height: 2.6rem

      @include bp('landscape')
        font-size: 2.6rem
        line-height: 3.4rem

      @include bp('large')
        font-size: 3rem
        line-height: 4rem

    & li
      margin: $common-spacing/2 0
      margin-left: 1.8rem
      padding-right: $common-spacing * 2

      @include bp('portrait')
        margin-left: 1.9rem

      @include bp('landscape')
        margin-left: 2.4rem

      @include bp('large')
        margin-left: 2.6rem


    & ol li
      list-style-type: decimal

    & ul li
      list-style-type: disc

    p
      margin-bottom: $common-spacing

    a
      text-decoration: underline

    hr
      margin-right: $common-spacing * 2

    th
      font-weight: $font-weight-bold
      line-height: 1.3
      padding: $common-spacing/2
      text-align: left
      vertical-align: middle

    td
      padding: $common-spacing/2
      text-align: left
      vertical-align: middle

    tr
      border-bottom: 1px solid $color-light

      &:first-child
        border-bottom: none

    table
      margin: $common-spacing 0
      width: 100%

      @include bp('portrait')
        margin: $common-spacing auto
        width: 80%

    table.three-columns
      & > th
        width: 33%

    p.portrait
      margin-bottom: $common-spacing
      margin-top: $common-spacing
      text-align: center

      & > img
        border-radius: 50%
        border: solid .5rem $color-main
        height: 50vw
        margin: auto
        padding: .2rem
        width: 50vw

        @include bp('portrait')
          $size: 20rem
          height: $size
          width: $size

    .quote
      @include bp('portrait')
        padding: $common-spacing * 2
        width: 70%


  &__multi-text-block-container
    $ttbc: &
    border-bottom: 0
    display: flex
    flex-direction: column

    @include bp('portrait')
      flex-direction: row

    &#{$ttbc}--text-only

      & .text-block__multi-text-block-content
        text-align: left

    &#{$ttbc}--double
      @include bp('portrait')
        margin-left: $common-spacing * 2
        margin-right: $common-spacing * 2

      @include bp('large')
        margin-left: auto
        margin-right: auto
        width: 85%

      & .text-block__multi-text-block

        @include bp('portrait')
          width: 35%

        &:first-child
          @include bp('portrait')
            width: 65%


    &#{$ttbc}--triple
      & .text-block__multi-text-block
        @include bp('portrait')
          //width: 33%
          //width: 15%

  &__multi-text-block
    $border: .2rem solid $color-very-light
    align-items: flex-start
    border-bottom: .2rem solid $color-very-light
    display: flex
    flex-direction: row
    padding: $common-spacing 0
    width: 100%

    &:first-child
      border-top: $border

      @include bp('portrait')
        border: none
        padding-left: 0

    @include bp('portrait')
      align-items: center
      border-bottom: none
      flex-direction: column
      padding: $common-spacing


    &:last-child
      @include bp('portrait')
        padding-right: 0

    &-icon
      width: 6.4rem

      @include bp('portrait')
        margin-bottom: $common-spacing
        width: 10rem

      @include bp('large')
        width: 12rem

    &-text-container
      margin-left: $common-spacing

      @include bp('portrait')
        font-size: $font-size-medium
        margin-left: 0
        text-align: center

        .text-block__multi-text-block-container--double &
          //text-align: left
          width: 100%

      @include bp('large')
        font-size: $font-size-really-very-large

    &-icon-text
      color: $color-tertiary
      font-size: 3rem
      font-weight: $font-weight-very-bold
      line-height: 3.4rem
      position: relative

      @include bp('portrait')
        font-size: 2.8rem
        line-height: 3.4rem
        text-align: center

      @include bp('landscape')
        font-size: 3.6rem
        line-height: 4.4rem

      @include bp('large')
        font-size: 5.2rem
        line-height: 6rem

    &-content
      font-size: 1.6rem
      line-height: 1.4
      text-align: center

      @include bp('portrait')
        font-size: 1.8rem
        line-height: 2.4rem

      .text-block__multi-text-block-container--double &
        width: 100%

        & img
          width: 100%

      @include bp('landscape')
        font-size: 2.4rem
        line-height: 3.2rem

      @include bp('large')
        font-size: 2.8rem
        line-height: 3.8rem

      & a
        text-decoration: underline

  &__cta-link-container
    display: flex
    position: relative
    text-align: center

    @include bp('portrait')
      margin-top: $common-spacing

      &:before
        background: $color-light
        content: ' '
        display: inline-block
        height: .2rem
        position: absolute
        top: 50%
        width: 100%

  &__cta-link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
    background-color: $color-main
    border-bottom: .2rem solid $color-main-shadow
    border-radius: 5rem
    box-shadow: 0 0 0 .3rem $color-white;
    color: $color-white
    display: inline-block
    font-size: 1.6rem
    font-weight: $font-weight-bold
    line-height: 2rem
    margin: $common-spacing auto
    padding: 1rem 2rem
    text-align: center
    text-decoration: none
    text-transform: uppercase
    z-index: 1

    @include bp('portrait')
      font-size: 2rem
      margin-left: auto
      margin-right: auto

    @include bp('landscape')
      font-size: 2.4rem
      line-height: 2.4rem
      padding: 1.5rem 1.7rem

    @include bp('large')
      font-size: 2.8rem
      line-height: 2.8rem
      padding: 2.2rem 4.4rem

